--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@react-router/fs-routes": "^7.11.0",
     "@react-router/node": "7.11.0",
     "@react-router/serve": "7.11.0",
+    "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "isbot": "^5.1.31",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "7.11.0",
@@ -31,9 +35,12 @@
     "@react-router/dev": "7.11.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "drizzle-kit": "^0.31.8",
     "tailwindcss": "^4.1.13",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
