--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "drizzle-orm": "^0.45.1",
     "isbot": "^5.1.31",
     "lucide-react": "^0.562.0",
+    "mongodb": "7.0",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "^19.2.3",
