--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "7.0",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
+    "pino": "^10.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "7.11.0",
@@ -40,6 +41,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "drizzle-kit": "^0.31.8",
+    "pino-pretty": "^13.1.3",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
