--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.562.0",
     "mongodb": "7.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
     "react": "^19.2.3",
@@ -37,6 +38,7 @@
     "@react-router/dev": "7.11.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
+    "@types/nodemailer": "^7.0.5",
     "@types/pg": "^8.16.0",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
