--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-router/fs-routes": "^7.11.0",
     "@react-router/node": "7.11.0",
     "@react-router/serve": "7.11.0",
+    "axios": "^1.13.2",
     "better-auth": "^1.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
